# einshard

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: application.md  conf.py  development.md  einshard.rst  index.rst  quick-start.md  requirements.txt  syntax.md  theory.md  tutorial.md
src/einshard/: __init__.py  einshard.py  parser.py  shard.py
tests/: test_einshard.py
